Fixed alignment in create user-form. Removed table from uselist

--- a/MinVakt/src/main/webapp/css/user-form.css
+++ b/MinVakt/src/main/webapp/css/user-form.css
@@ -69,39 +69,38 @@ label{
     margin: 0 35% 0 1.25%;
 }
 #work-percent-label{
-    margin-right: -15%;
-    margin-left: -1%;
+    margin-right: -18%;
+    margin-left: -6%;
 }
 #postal-code-label{
-    margin-left: 28%;
+    margin-left: 25%;
     margin-right: -15%;
 }
 #last_name{
-    display: inline;
-    width: 46%;
-    margin: 0 1.25% 0.8rem 1.25%;
+    display: inline-block;
+    width: 45%;
+    margin: 0 1.3% 0.8rem 1.3%;
 }
 #first_name{
-    display: inline;
-    width: 46%;
-    margin: 0 1.25% 0.8rem 1.25%;
+    display: inline-block;
+    width: 45%;
+    margin: 0 1.3% 0.8rem 1.3%;
 }
 #spinner{
     width: 10%;
     color: #2D5684;
 }
 #address{
-    display: inline;
-    width: 73%;
+    display: inline-block;
+    width: 70%;
 }
 #postal_code{
-    display: inline;
+    display: inline-block;
     width: 20%;
 }
 .inline-container{
     width: 100%;
-    margin-bottom: 0.8rem;
-    margin: auto;
+    margin: 0 0 0.8rem 0;
     position: relative;
     display: block;
 }
@@ -142,6 +141,7 @@ option[value=""][disabled]{
     display: none;
 }
 option{
-    color: white;
+    color: #2D5684;
     z-index: 2;
+    display: list-item;
 }
